# dobby-api

./: Cargo.toml  README.md  build.rs
prebuilt/ios/arm64/: libdobby.dylib
prebuilt/ios/arm64e/: libdobby.dylib
prebuilt/ios/universal/: libdobby.dylib
prebuilt/macos/arm64/: libdobby.dylib
prebuilt/macos/arm64e/: libdobby.dylib
prebuilt/macos/x86_64/: libdobby.dylib
src/: bind.rs  error.rs  lib.rs
