[package]
name = "dobby-api"
version = "0.1.0"
edition = "2021"
description = "Export DobbyHook's api in rust style"
license = "Apache-2.0"
repository = "https://github.com/shadow3aaa/dobby-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.45"

[build-dependencies]
bindgen = "0.66.1"
