[package]
name = "dobby-api"
version = "1.0.1"
edition = "2021"
description = "Export DobbyHook's api in rust style"
license = "Apache-2.0"
repository = "https://github.com/shadow3aaa/dobby-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"

[build-dependencies]
anyhow = "1.0.81"
bindgen = "0.69.4"
